# dinocode

./: CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
dinocode/: Cargo.toml
dinocode-cli/: Cargo.toml  build.rs
dinocode-cli/src/: args.rs  main.rs
dinocode-cli/src/display/: bytecode.rs  mod.rs  tokens.rs
dinocode-core/: Cargo.toml
dinocode-core/src/: lib.rs  macros.rs
dinocode-core/src/builtins/: io.rs  mod.rs  types.rs  utils.rs
dinocode-core/src/errors/: runtime.rs
dinocode-core/src/formatter/: mod.rs  renderer.rs
dinocode-core/src/formatter/types/: colors.rs  errors.rs  mod.rs
dinocode-core/src/memory/: manager.rs  mod.rs
dinocode-core/src/memory/gc/: copying.rs  mark_sweep.rs  mod.rs  pressure.rs
dinocode-core/src/memory/heap/: mod.rs
dinocode-core/src/memory/heap/arena/: header.rs  interning.rs  mod.rs  operations.rs
dinocode-core/src/memory/heap/pool/: allocator.rs  bitmap.rs  mod.rs
dinocode-core/src/memory/heap/pool/operations/: mod.rs  operations.rs
dinocode-core/src/memory/stack/: call_frames.rs  mod.rs  operations.rs  variables.rs
dinocode-core/src/memory/types/: call_frames.rs  heap_header.rs  mod.rs  object_types.rs  pool_types.rs  property_flags.rs
dinocode-core/src/native/: conversions.rs  mod.rs  registry.rs
dinocode-core/src/prototypes/: array.rs  function.rs  math.rs  mod.rs  object.rs  range.rs  string.rs  time.rs  type.rs
dinocode-core/src/runtime/: context.rs
dinocode-core/src/types/: dinoref.rs  instruction.rs  mod.rs  opcode_defs.rs  symbol.rs  typeid.rs  user_function.rs
dinocode-core/src/utils/: bigint.rs  dinojson.rs  interning.rs  mod.rs  opcode.rs  source_map.rs  suggestions.rs  time_format.rs  type_conversions.rs  value_pool.rs
dinocode-core/src/utils/bigint/: arithmetic.rs  bigint.rs  cmp.rs  conversions.rs  mod.rs  ops.rs
dinocode-core/src/utils/conversions/: mod.rs  to_bool.rs  to_string.rs
dinocode-core/src/utils/conversions/lax/: to_bigint.rs  to_number.rs
dinocode-core/src/utils/conversions/strict/: mod.rs  to_bigint.rs  to_number.rs
dinocode-core/src/utils/parsers/numeric/: error.rs  mod.rs  parse.rs  utils.rs
dinocode-core/src/utils/parsers/numeric/lax/: bigint.rs  f64.rs  i64.rs  number.rs
dinocode-core/src/utils/parsers/numeric/strict/: bigint.rs  f64.rs  i64.rs  mod.rs  number.rs
dinocode-core/src/utils/parsers/numeric/types/: number.rs
dinocode-platform/: Cargo.toml
dinocode-platform/src/: io.rs  lib.rs  process.rs  thread.rs  time.rs
dinocode-platform/src/sys/: mod.rs
dinocode-platform/src/sys/native/: io.rs  mod.rs  process.rs  thread.rs
dinocode-platform/src/sys/native/time/: mod.rs  unix.rs  windows.rs
dinocode-platform/src/sys/wasm/: io.rs  mod.rs  process.rs  thread.rs  time.rs
dinocode-wasm/: Cargo.toml
dinocode-wasm/src/: lib.rs
dinocode-wasm/src/analysis/: analyzer.rs  helpers.rs  mod.rs
dinocode-wasm/src/analysis/cfg/: builder.rs  helpers.rs  mod.rs  types.rs
dinocode-wasm/src/bytecode/: converters.rs  mod.rs  types.rs
dinocode/src/: lib.rs
dinocode/src/compiler/lexer/: errors.rs  mod.rs
dinocode/src/compiler/lexer/core/: lexer.rs
dinocode/src/compiler/lexer/errors/: error.rs  mod.rs  types.rs
dinocode/src/compiler/lexer/types/: buffer.rs  context.rs  context_info.rs  mod.rs  modes.rs  operator_info.rs  token_list.rs
dinocode/src/compiler/lexer/utils/: buffer.rs  char_utils.rs  headers.rs  mod.rs  numeric.rs  string.rs
dinocode/src/compiler/parser/: errors.rs  mod.rs
dinocode/src/compiler/parser/core/: mod.rs  parser.rs
dinocode/src/compiler/parser/errors/: error.rs  mod.rs  types.rs
dinocode/src/compiler/parser/types/: context.rs  mod.rs
dinocode/src/interpreter/: errors.rs  mod.rs
dinocode/src/interpreter/core/: mod.rs  vm.rs
dinocode/src/interpreter/core/types/: context.rs  mod.rs
dinocode/src/shared/errors/: mod.rs
dinocode/src/shared/errors/services/: resolver.rs
dinocode/src/shared/errors/types/: base_error.rs  error_info.rs  mod.rs
dinocode/src/shared/errors/utils/: formatter.rs
dinocode/src/shared/types/: keywords.rs  mod.rs  operators.rs  special_chars.rs  token.rs  token_type.rs  token_value.rs
dinocode/src/shared/utils/: counter.rs  mod.rs  operators.rs  type_conversion.rs
(+61 files in other folders)
