[workspace]
members = [
    "dinocode-cli",
    "dinocode",
    "dinocode-macros",
    "dinocode-core",
    "dinocode-wasm",
    "dinocode-platform"
]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
authors = ["Ismael Quiroz (BlassGO)"]
description = "A programming language and interpreter"

[workspace.dependencies]
# dinocode
thiserror = "1.0"
colored = "2.0"
log = "0.4"

# dinocode native functions
paste = "1.0"
# dinocode-macros
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0"

# dinocode-core
env_logger = "0.10"

# Windows support
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_ProcessStatus"] }
winres = "0.1"

# WASM support
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true         
opt-level = 3
codegen-units = 1   
panic = "abort"
