[package]
name = "dinocode-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console", "Window"] }
js-sys = { workspace = true }
